# rust-offsec

./: README.md
exploits/CVE-2018-16763/: Cargo.toml  README.md
exploits/CVE-2018-16763/src/: main.rs
exploits/CVE-2018-19422/: Cargo.toml  README.md
exploits/CVE-2018-19422/src/: main.rs
exploits/CVE-2023-27040/: Cargo.toml  README.md
exploits/CVE-2023-27040/src/: main.rs
exploits/osCommerce-2_3_4-rce/: Cargo.toml  README.md
exploits/osCommerce-2_3_4-rce/src/: main.rs
exploits/php-8_1_0-dev-backdoor-rce/: Cargo.toml  README.md
exploits/php-8_1_0-dev-backdoor-rce/src/: main.rs
scripts/blind-ldap-extraction-THM/: Cargo.toml  README.md
scripts/blind-ldap-extraction-THM/src/: main.rs
scripts/brute-force-hammerTHM/: Cargo.toml  README.md
scripts/brute-force-hammerTHM/src/: main.rs
scripts/check-valid-emails-THM/: Cargo.toml  README.md
scripts/check-valid-emails-THM/src/: main.rs
tools/nosql_password_checker/: Cargo.toml  README.md
tools/nosql_password_checker/config/: default.toml
tools/nosql_password_checker/src/: checker.rs  config.rs  http.rs  main.rs  utils.rs
