[package]
name = "nosql_password_checker"
version = "0.1.0"
edition = "2024"
authors = ["Melquisedeque"]
description = "Uma ferramenta para mapear a senha de um usuario em um banco NoSql"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
regex = "1.5"
